--- a/NumberSum.ipynb
+++ b/NumberSum.ipynb
@@ -21,7 +21,7 @@
         "- display a 2D m by n grid of numbers. each number is between 1 and 9 inclusive.\n",
         "- when the player is ready (by pressing y), computer will replace the grid, 'hiding' the numbers with ascending alphabets A, B, C, ...\n",
         "- computer will generate a pseudo random up to 2-digit integer k\n",
-        "- prompt the player to enter a sequence of i letters which associated numbers sum up to k. the sequence must be connected either horizontally, vertically or diagonally. For a start, you may assume i = 3.\n",
+        "- prompt the player to enter a sequence of i letters which associated numbers sum up to k. the sequence must be connected either horizontally, vertically or diagonally. for a start, you may assume i = 3.\n",
         "- if the sequence correctly sums up to k, player earns 1 point\n",
         "- if the sequence does not sum up to k, player loses 1 point\n",
         "- there can be more than 1 correct sequence that sums up to k. so prompt for input again.\n",
