--- a/ToDoList/ToDoList.ipynb
+++ b/ToDoList/ToDoList.ipynb
@@ -27,18 +27,18 @@
     "\n",
     "Sample Input:<br>\n",
     "<code>\n",
-    "heap = Heap()<br>\n",
-    "heap.push('2023-10-31', 'Complete Maths HW')<br>\n",
-    "heap.push('2023-10-30', 'Revise for upcoming exams')<br>\n",
-    "heap.push('2023-11-03', 'Read up on Data Structures and Algorithms')<br>\n",
-    "heap.pop()<br>\n",
-    "heap.display()\n",
+    "heap = Heap()<br>",
+    "heap.push('2023-10-31', 'Complete Maths HW')<br>",
+    "heap.push('2023-10-30', 'Revise for upcoming exams')<br>",
+    "heap.push('2023-11-03', 'Read up on Data Structures and Algorithms')<br>",
+    "heap.pop()<br>",
+    "heap.display()",
     "</code>\n",
     "\n",
     "Sample Output:<br>\n",
     "<code>\n",
-    "2023-10-31 Complete Maths HW<br>\n",
-    "2023-11-03 Read up on Data Structures and Algorithms\n",
+    "2023-10-31 Complete Maths HW<br>",
+    "2023-11-03 Read up on Data Structures and Algorithms",
     "</code>"
    ]
   },
