--- a/ToDoList/ToDoList.ipynb
+++ b/ToDoList/ToDoList.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Ensure that data validation is added for the <code>pop()</code> function.\n",
     "\n",
-    "Sample Input:<br>\n",
+    "Sample Input:<br>",
     "<code>\n",
     "heap = Heap()<br>",
     "heap.push('2023-10-31', 'Complete Maths HW')<br>",
@@ -35,7 +35,7 @@
     "heap.display()",
     "</code>\n",
     "\n",
-    "Sample Output:<br>\n",
+    "Sample Output:<br>",
     "<code>\n",
     "2023-10-31 Complete Maths HW<br>",
     "2023-11-03 Read up on Data Structures and Algorithms",
