--- a/ToDoList/ToDoList.ipynb
+++ b/ToDoList/ToDoList.ipynb
@@ -26,7 +26,7 @@
     "Ensure that data validation is added for the <code>pop()</code> function.\n",
     "\n",
     "Sample Input:<br>",
-    "<code>\n",
+    "<code>",
     "heap = Heap()<br>",
     "heap.push('2023-10-31', 'Complete Maths HW')<br>",
     "heap.push('2023-10-30', 'Revise for upcoming exams')<br>",
@@ -36,7 +36,7 @@
     "</code>\n",
     "\n",
     "Sample Output:<br>",
-    "<code>\n",
+    "<code>",
     "2023-10-31 Complete Maths HW<br>",
     "2023-11-03 Read up on Data Structures and Algorithms",
     "</code>"
