--- a/ToDoList/ToDoList_solutions.ipynb
+++ b/ToDoList/ToDoList_solutions.ipynb
@@ -25,20 +25,20 @@
     "\n",
     "Ensure that data validation is added for the <code>pop()</code> function.\n",
     "\n",
-    "Sample Input:<br>\n",
-    "<code>\n",
-    "heap = Heap()<br>\n",
-    "heap.push('2023-10-31', 'Complete Maths HW')<br>\n",
-    "heap.push('2023-10-30', 'Revise for upcoming exams')<br>\n",
-    "heap.push('2023-11-03', 'Read up on Data Structures and Algorithms')<br>\n",
-    "heap.pop()<br>\n",
-    "heap.display()\n",
-    "</code>\n",
+    "Sample Input:<br>",
+    "<code>",
+    "heap = Heap()<br>",
+    "heap.push('2023-10-31', 'Complete Maths HW')<br>",
+    "heap.push('2023-10-30', 'Revise for upcoming exams')<br>",
+    "heap.push('2023-11-03', 'Read up on Data Structures and Algorithms')<br>",
+    "heap.pop()<br>",
+    "heap.display()",
+    "</code>",
     "\n",
-    "Sample Output:<br>\n",
-    "<code>\n",
-    "2023-10-31 Complete Maths HW<br>\n",
-    "2023-11-03 Read up on Data Structures and Algorithms\n",
+    "Sample Output:<br>",
+    "<code>",
+    "2023-10-31 Complete Maths HW<br>",
+    "2023-11-03 Read up on Data Structures and Algorithms",
     "</code>"
    ]
   },
