--- a/ToDoList/ToDoList_solutions.ipynb
+++ b/ToDoList/ToDoList_solutions.ipynb
@@ -33,7 +33,7 @@
     "heap.push('2023-11-03', 'Read up on Data Structures and Algorithms')<br>",
     "heap.pop()<br>",
     "heap.display()",
-    "</code>",
+    "</code>\n",
     "\n",
     "Sample Output:<br>",
     "<code>",
