--- a/NumberGame_Joanne_Zhu_Xin_Yi.ipynb
+++ b/NumberGame_Joanne_Zhu_Xin_Yi.ipynb
@@ -16,20 +16,22 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HZmln7lhsIjx",
-        "outputId": "dacf7cc4-2fad-4164-b70c-90e4d14c65ed"
+        "outputId": "5eeb78b3-6035-41f5-a951-018a9833a012"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[2, 4, 6, 3], [7, 5, 5, 4], [9, 5, 1, 6], [9, 8, 2, 1]]\n"
+            "[[7, 1, 3, 4], [8, 3, 3, 1], [6, 6, 8, 5], [7, 6, 5, 5]]\n",
+            "Ready(y/n)? y\n",
+            "[['A', 'B', 'C', 'D'], ['E', 'F', 'G', 'H'], ['I', 'J', 'K', 'L'], ['M', 'N', 'O', 'P']]\n"
           ]
         }
       ],
@@ -57,6 +59,22 @@
         "\n",
         "print(matrix)\n",
         "# when the player is ready (by pressing y), computer will replace the grid, 'hiding' the numbers with ascending alphabets A, B, C, ...\n",
+        "status = input(\"Ready(y/n)? \")\n",
+        "\n",
+        "if status == 'y':\n",
+        "  aatrix = []\n",
+        "  asc = 65\n",
+        "  k = 0\n",
+        "  # Use nested for loops to fill the array with values\n",
+        "  for i in range(rows):\n",
+        "    row = []  # Initialize an empty row\n",
+        "    for j in range(cols):\n",
+        "        # Add values to the row (you can replace this with your own values or calculations)\n",
+        "      row.append(chr(65 + k))\n",
+        "      k += 1\n",
+        "    aatrix.append(row)  # Add the row to the 2D array\n",
+        "\n",
+        "print(aatrix)\n",
         "# computer will generate a pseudo random up to 2-digit integer k\n",
         "# prompt the player to enter a sequence of i letters which associated numbers sum up to k. the sequence must be connected either horizontally, vertically or diagonally. for a start, you may assume i = 3.\n",
         "# if the sequence correctly sums up to k, player earns 1 point\n",
@@ -67,6 +85,70 @@
         "# it is impossible to form a sequence that sums to k\n",
         "# player quits by entering -1\n",
         "# when the game terminates, show all possible sequences that sum to k, or 0 if none."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = [1,2,3]\n",
+        "B = A\n",
+        "\n",
+        "print(B)\n",
+        "B[0] = 5\n",
+        "print(B)\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Su1VKfOl4Vcc",
+        "outputId": "8705d6e5-6608-4c8b-b217-33b5efac66a8"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n",
+            "[5, 2, 3]\n",
+            "[5, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import copy\n",
+        "\n",
+        "A = [1,2,3]\n",
+        "B = copy.deepcopy(A)\n",
+        "\n",
+        "print(B)\n",
+        "B[0] = 5\n",
+        "print(B)\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQMHT-ql4_p-",
+        "outputId": "7f227087-f756-40f7-dc93-53444d1adb2b"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n",
+            "[5, 2, 3]\n",
+            "[1, 2, 3]\n"
+          ]
+        }
       ]
     },
     {
