--- a/NumberGame_Joanne_Zhu_Xin_Yi.ipynb
+++ b/NumberGame_Joanne_Zhu_Xin_Yi.ipynb
@@ -78,6 +78,7 @@
         "# computer will generate a pseudo random up to 2-digit integer k\n",
         "k =random.randint(10,27)\n",
         "# prompt the player to enter a sequence of i letters which associated numbers sum up to k. the sequence must be connected either horizontally, vertically or diagonally. for a start, you may assume i = 3.\n",
+        "seq = input(\"Enter 3 letters: \")\n",
         "# if the sequence correctly sums up to k, player earns 1 point\n",
         "# if the sequence does not sum up to k, player loses 1 point\n",
         "# there can be more than 1 correct sequence that sums up to k. so prompt for input again.\n",
